0.1.0-next:
 * server: accept multiple config files
 * client: accept host and port options
 * server: better error messages for invalid configuration
 * server: improved logging

0.1.0:
 * first release